SFDC Automation/src/objects/Campaign.object
<CustomObject>
    <fields>
        <fullName>CAMPAIGN_CODE__c</fullName>
        <label>Campaign Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CT_REG_ID__c</fullName>
        <description>Contact Registration ID</description>
        <label>Contact Registration ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campaign_Level__c</fullName>
        <label>Campaign Level</label>
        <picklist>
            <picklistValues>
                <fullName>National</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Local</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DAY_IN_ADV_FOR_FIRST_NOTIFY__c</fullName>
        <description>Day in Advance for First Notify</description>
        <label>Day in Advance for First Notify</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Campaign Details Captured&quot;, &quot;Missing: &quot;&amp;IF( LEN( Name)&lt;5,&quot;Meaningful Campaign Name, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Status ,&quot;&quot;), &quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( StartDate )))=0, &quot;Start Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT(MONTH( EndDate )))=0, &quot;End Date, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(NumberOfContacts  +  NumberOfLeads = 0, &quot;No Associated Members, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN(TEXT( ExpectedRevenue ))=0, &quot;Expected Revenue&quot;,&quot;&quot;))</formula>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF(LEN(  Name  ) &lt; 5, 0,20) + IF(ISPICKVAL(  Type ,&quot;&quot; ), 0,20) + IF(ISPICKVAL( Status ,&quot;&quot; ), 0,20) + IF(LEN( TEXT(MONTH( StartDate )))= 0, 0,10) + IF( LEN(TEXT(MONTH( EndDate ))) = 0, 0,10) + IF(  NumberOfContacts  +  NumberOfLeads = 0, 0,10)  + IF( LEN( TEXT( ExpectedRevenue ) ) = 0, 0,10)</formula>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Call_Center_Calls__c</fullName>
        <description>Number of call center calls that were made</description>
        <label>Call Center Calls</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Campaign_Search_Visits__c</fullName>
        <description>Number of visits for the search campaign(s) specified</description>
        <label>Campaign Search Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Email_Bouncebacks__c</fullName>
        <description>Emails sent that have been marked as hard bounces</description>
        <label>Email Bouncebacks</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Email_Click_Throughs__c</fullName>
        <description>Number of click-throughs from the emails (direct and redirect links)</description>
        <label>Email Click Throughs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Email_Unsubscribes__c</fullName>
        <label>Email Unsubscribes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Emails_Opened__c</fullName>
        <description>Number of times the emails were opened</description>
        <label>Emails Opened</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Emails_Sent__c</fullName>
        <description>Number of emails sent</description>
        <label>Emails Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Event_Registrations__c</fullName>
        <description>Number of registrations for the events</description>
        <label>Event Registrations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Faxes_Sent__c</fullName>
        <label>Faxes Sent</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Forms_Submitted__c</fullName>
        <description>Number of form submissions</description>
        <label>Forms Submitted</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Hypersite_Visits__c</fullName>
        <description>Number of visits to the hypersites</description>
        <label>Hypersite Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Online_Referral_Visits__c</fullName>
        <description>Number of visits for the referral campaign(s) specified</description>
        <label>Online Referral Visits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Possible_Email_Forwards__c</fullName>
        <description>Number of emails that were possibly forwarded</description>
        <label>Possible Email Forwards</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Print_Mail_Sends__c</fullName>
        <description>Number of direct mail pieces that were sent</description>
        <label>Print Mail Sends</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Surveys_Completed__c</fullName>
        <description>Number of surveys completed</description>
        <label>Surveys Completed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ELOQUA__Unique_Email_Visitors__c</fullName>
        <description>Total click-throughs from the email to the client’s website that has Eloqua tracking on it.  The total is then deduplicated by email address.</description>
        <label>Unique Email Visitors</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Legacy_Campaign_ID__c</fullName>
        <description>Used for Data Migration 1/5/11</description>
        <externalId>true</externalId>
        <label>Legacy Campaign ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MAILDROP_ID__c</fullName>
        <description>Maildrop ID</description>
        <label>Maildrop ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NTT_Status__c</fullName>
        <label>NTT Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Reviewed (Default)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review Next Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Review 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Decided to no longer contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managed by Field Sales</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PRODUCT_LINE__c</fullName>
        <description>Product Line</description>
        <label>Product Line</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ext_campaign_id__c</fullName>
        <externalId>true</externalId>
        <label>ext_campaign_id</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <listViews>
        <fullName>AllActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>notEqual</operation>
            <value>Completed,Aborted,Inactive</value>
        </filters>
        <label>All Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>All_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <label>All Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Food_Beverage_Association_2013</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <label>Food &amp; Beverage Association 2013</label>
    </listViews>
    <listViews>
        <fullName>Fuel_Campaign</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>cmonsant</value>
        </filters>
        <label>Fuel Campaign</label>
        <sharedTo>
            <group>InsideSalesNortheast</group>
            <group>InsideSalesSoutheast</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Inactive_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.STATUS</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>Inactive Campaigns</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Marketing_Automation_Campaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.BUDGETED_COST</columns>
        <columns>CAMPAIGN.ACTUAL_COST</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.CREATED_DATE</columns>
        <columns>CAMPAIGN.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ALIAS</field>
            <operation>equals</operation>
            <value>eloqaint</value>
        </filters>
        <label>Marketing Automation Campaigns</label>
        <sharedTo>
            <group>AllMarketingFMC</group>
            <group>Marketing_Automation_Integration_User</group>
            <group>Marketing_Automation_Pilot_BDM</group>
            <group>Marketing_Automation_Pilot_TSA</group>
            <group>SystemAdmin</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyActiveCampaigns</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.START_DATE</columns>
        <columns>CAMPAIGN.END_DATE</columns>
        <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CAMPAIGN.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>My Active Campaigns</label>
    </listViews>
    <listViews>
        <fullName>TSA_National_Tag_Team_All</fullName>
        <columns>CAMPAIGN.NAME</columns>
        <columns>CAMPAIGN.STATUS</columns>
        <columns>CAMPAIGN.TOTAL_NUM_LEADS</columns>
        <columns>CAMPAIGN.TOT_CONTACTS</columns>
        <columns>CAMPAIGN.NUM_CONVERTED_LEADS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CAMPAIGN.NAME</field>
            <operation>startsWith</operation>
            <value>NTT</value>
        </filters>
        <label>TSA - National Tag Team All</label>
        <sharedTo>
            <roleAndSubordinates>TSA_Manager</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>